--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>PSUMATE</title>
     <base href="/">
     <!-- Bootstrap core CSS -->
     <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -56,6 +56,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="./assets/js/agency.js"></script>
+
+    <!-- Javascript -->
+    <script src="./assets/js/animations.js"></script>
 
   </head>
   <body">
