--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PSUMATE</title>
+    <title>PREMATE | ACADEMIA PSU ONLINE</title>
     <base href="/">
     <!-- Bootstrap core CSS -->
     <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
