--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
 
     <!-- Custom styles for this template -->
     <link href="./assets/css/agency.min.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
 
     <!--<base href="~/" />-->
 
@@ -61,7 +62,7 @@
     <script src="./assets/js/animations.js"></script>
 
   </head>
-  <body">
+  <body>
     <app-root></app-root>
   </body>
 
