se agregaron modulos de admin

--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,11 @@
     <script src="./assets/js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="./assets/js/agency.js"></script>
+    <!--<script src="./assets/js/agency.js"></script>-->
 
     <!-- Javascript -->
     <script src="./assets/js/animations.js"></script>
-
+    <base href="/">
   </head>
   <body>
     <app-root></app-root>
